package de.dhbw.karlsruhe.getraenkeabrechnung.io.input.result;

enum ResultState {
    Value,
    Abort,
    Help
}